SYM-7599: Fixed SonarCloud alerts